--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,7 @@
-== README
+== ProjectManager
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+School project for Databases course.
 
-Things you may want to cover:
+Tool for managing tasks and projects.
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Support multiple projects, tasks and displays various statistics.
